test/Fail/Issue3007.err
Issue3007.agda:8.15: error: [ParseError]
in the name _--, the part -- is not valid
